parser/src/snapshots/emerald_lang_parser__parser__tests__parse_dict_comprehension.snap
---
source: src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 19,
        },
    ),
    custom: (),
    node: DictComp {
        key: Located {
            location: Location {
                row: 1,
                column: 1,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 3,
                },
            ),
            custom: (),
            node: Name {
                id: "x1",
                ctx: Load,
            },
        },
        value: Located {
            location: Location {
                row: 1,
                column: 5,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 7,
                },
            ),
            custom: (),
            node: Name {
                id: "x2",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 12,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 13,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 17,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 18,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
