parser/src/snapshots/emerald_lang_parser__parser__tests__parse_double_list_comprehension.snap
---
source: src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 48,
        },
    ),
    custom: (),
    node: ListComp {
        elt: Located {
            location: Location {
                row: 1,
                column: 1,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 2,
                },
            ),
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 7,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 12,
                        },
                    ),
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 7,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 8,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 10,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 12,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "y2",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 16,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 17,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 22,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 23,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "a",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 27,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 28,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "b",
                        ctx: Load,
                    },
                },
                ifs: [
                    Located {
                        location: Location {
                            row: 1,
                            column: 32,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 37,
                            },
                        ),
                        custom: (),
                        node: Compare {
                            left: Located {
                                location: Location {
                                    row: 1,
                                    column: 32,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 33,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                            ops: [
                                Lt,
                            ],
                            comparators: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 36,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 37,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            5,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                    },
                    Located {
                        location: Location {
                            row: 1,
                            column: 41,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 47,
                            },
                        ),
                        custom: (),
                        node: Compare {
                            left: Located {
                                location: Location {
                                    row: 1,
                                    column: 41,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 42,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 45,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 47,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            10,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                    },
                ],
                is_async: 0,
            },
        ],
    },
}
