parser/src/snapshots/emerald_lang_parser__parser__tests__parse_if_elif_else.snap
---
source: src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 3,
                column: 8,
            },
        ),
        custom: (),
        node: If {
            test: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 4,
                    },
                ),
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 6,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 8,
                        },
                    ),
                    custom: (),
                    node: Expr {
                        value: Located {
                            location: Location {
                                row: 1,
                                column: 6,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 8,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    10,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            ],
            orelse: [
                Located {
                    location: Location {
                        row: 2,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 3,
                            column: 0,
                        },
                    ),
                    custom: (),
                    node: If {
                        test: Located {
                            location: Location {
                                row: 2,
                                column: 5,
                            },
                            end_location: Some(
                                Location {
                                    row: 2,
                                    column: 6,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        body: [
                            Located {
                                location: Location {
                                    row: 2,
                                    column: 8,
                                },
                                end_location: Some(
                                    Location {
                                        row: 2,
                                        column: 10,
                                    },
                                ),
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        location: Location {
                                            row: 2,
                                            column: 8,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 2,
                                                column: 10,
                                            },
                                        ),
                                        custom: (),
                                        node: Constant {
                                            value: Int(
                                                20,
                                            ),
                                            kind: None,
                                        },
                                    },
                                },
                            },
                        ],
                        orelse: [
                            Located {
                                location: Location {
                                    row: 3,
                                    column: 6,
                                },
                                end_location: Some(
                                    Location {
                                        row: 3,
                                        column: 8,
                                    },
                                ),
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        location: Location {
                                            row: 3,
                                            column: 6,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 3,
                                                column: 8,
                                            },
                                        ),
                                        custom: (),
                                        node: Constant {
                                            value: Int(
                                                30,
                                            ),
                                            kind: None,
                                        },
                                    },
                                },
                            },
                        ],
                    },
                },
            ],
        },
    },
]
