parser/src/snapshots/emerald_lang_parser__parser__tests__parse_if_else_generator_comprehension.snap
---
source: src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 26,
        },
    ),
    custom: (),
    node: GeneratorExp {
        elt: Located {
            location: Location {
                row: 1,
                column: 3,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 14,
                },
            ),
            custom: (),
            node: IfExp {
                test: Located {
                    location: Location {
                        row: 1,
                        column: 6,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 7,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                body: Located {
                    location: Location {
                        row: 1,
                        column: 1,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 2,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Load,
                    },
                },
                orelse: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 14,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 19,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 20,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 24,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 25,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
