parser/src/snapshots/emerald_lang_parser__parser__tests__parse_kwargs.snap
---
source: src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 32,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 32,
                    },
                ),
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 7,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "my_func",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 8,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 20,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "positional",
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 22,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 31,
                                },
                            ),
                            custom: (),
                            node: KeywordData {
                                arg: Some(
                                    "keyword",
                                ),
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 30,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 31,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            2,
                                        ),
                                        kind: None,
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
